correccion de img codigo de vestimenta

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <p class="ubication__salon">Salón de Eventos 
                 <br><span>Santa Lucía</span></p>
             <p class="ubication_direction">Hora:</p>
-            <p class="ubication__hour"> 05 : 30 Hrs.</p>
+            <p class="ubication__hour"> 17 : 30 Hrs.</p>
             <p class="ubication__direction">Dirección:</p>
             <p class="ubication__description">Barrio Morelos, San Andrés Timilpan, Edo. de Méx.</p>
             <a class="ubication__btn"
@@ -283,7 +283,7 @@
             <img src="./img/EDIT/guirnalda-whats.png" class="whats-img" alt="">
             <p class="texto-invitacion" id="texto-invitacion">
                 ¡Tu presencia hará nuestro día mágico!<br>
-                ¿Nos puedes confirmar si vendrás?<br>
+                ¡Confirma tu asistencia!<br>
             </p>
 
             <div class="btn-wrapper">
