--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
     <title>Mis XV | Valeria Nava</title>
+    <link rel="icon" type="image/png" href="./img/EDIT/CRV_invitaciones.png">
     <link rel="stylesheet" href="css/marco.css">
 </head>
 
