Implementacion de imagen principal

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-    <title>Mis XV | Valeria Nava</title>
+    <title>Mis XV | Valeria</title>
     
     <link rel="stylesheet" href="css/marco.css">
 </head>
@@ -25,7 +25,7 @@
         <section class="nombreContenedor">
             <h2 class="nombreContenedor__leyenda">Mis XV</h2>
             <h1 class="nombreContenedor__nombre">Valeria</h1>
-            <h2 class="nombreContenedor__apellidos">Nava García</h2>
+            <!-- <h2 class="nombreContenedor__apellidos">Nava García</h2> -->
         </section>
 
         <section class="reproductorContenedor">
@@ -274,7 +274,7 @@
         <section class="nombreContenedor2">
             <h2 class="nombreContenedor__leyenda">Mis XV</h2>
             <h1 class="nombreContenedor__nombre">Valeria</h1>
-            <h2 class="nombreContenedor__apellidos">Nava García</h2>
+            <!-- <h2 class="nombreContenedor__apellidos">Nava García</h2> -->
         </section>
         </div>
 
